--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: onebot
-description: A starting point for Dart libraries or applications.
+name: rikka
+description: A Onebot application SDK Dart libraries.
 version: 1.0.0
 # homepage: https://www.example.com
 
@@ -15,3 +15,4 @@ dev_dependencies:
   test: ^1.16.0
 dependencies: 
   logging: ^1.0.2
+  toml: ^0.12.0
